<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/record_dialog_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_details"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/record_dialog_et"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/record_dialog_tv"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/dialog_detail"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:inputType="text"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/record_dialog_et"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/record_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/dialog_cancel" />

        <Button
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/record_dialog_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/dialog_ensure" />
    </LinearLayout>


</RelativeLayout>